# Int

./: .env.example  .gitignore  Dockerfile  FINDINGS.md  Instrucciones.md  README.md  README_TEST.md  SALVAGE.md  benchmark_report.py  check_env.py  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  style_profile.json  test_comprehensive_fallback.py  test_engine_fallback.py  test_fallback.py  test_fish_tts.py  test_translation.py
backend/api/: app.py
backend/confidence/: emergency.py  scoring.py
backend/config/: settings.py
backend/database/: schema.sql
backend/glossary/: service.py
backend/interpreter/: service.py
backend/learning/: recorder.py  trainer.py
backend/memory/: conversation.py
backend/monitoring/: metrics.py
backend/providers/: base.py  deepgram.py  deepseek.py  (+2 more)
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
qa_frontend/: Dockerfile  package.json  tsconfig.json
src/: confidence.py  emergency.py  gui.py  live_engine.py  live_interpreter.py  logging_utils.py  memory.py  prompts.py  segmentation.py  stt.py  terminology.py  test_interpreter.py  translate.py  tts.py  youtube_test.py
tests/: conftest.py  test_confidence_routing.py  test_emergency.py  test_fallback_hierarchy.py  test_fish_session_reuse.py  test_glossary_not_injected.py  test_helpers.py  test_latency_instrumentation.py  test_memory_speaker.py  test_segmentation.py  test_segmentation_codeswitch.py  test_terminology.py  test_translate.py  test_translate_deepseek_validate.py  test_translate_local.py
(+12 files in other folders)
