[project]
name="medical-interpretation-platform"
version="0.2.0"
requires-python=">=3.12"
dependencies=["fastapi>=0.115","uvicorn[standard]>=0.30","pydantic>=2.8","PyYAML>=6","deepgram-sdk>=3.7","openai>=1.40","httpx>=0.27","asyncpg>=0.29","redis>=5","psutil>=6","python-multipart>=0.0.9"]
[project.optional-dependencies]
test=["pytest>=8","pytest-asyncio>=0.23","httpx>=0.27"]
[tool.pytest.ini_options]
testpaths=["backend/tests"]
pythonpath=["."]
asyncio_mode="auto"
